# rbac-axum

./: .gitignore  Cargo.toml  README.md  m.sh
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: auth.rs  mod.rs  protected.rs  public.rs
src/models/: mod.rs  users.rs
test/: .admin_token  .user_token  01-public.sh  02-login-user.sh  03-login-admin.sh  04-auth-test.sh
