[package]
name = "rbac-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
once_cell = "1.19"